--- a/tugas 2/tugas2.scss
+++ b/tugas 2/tugas2.scss
@@ -3,8 +3,7 @@
     padding-top: 120px;
     display: flex;
     flex-flow: column;
-    min-height: 230px;
-
+    min-height: 100px;
     .judul {
       position: relative;
       height: 50vh;
@@ -33,7 +32,6 @@
       padding-top: 20px;
       padding-left: 240px;
       height: 60px;
-      
       z-index: 99999;
       img {
         width: 240px;
@@ -68,6 +66,93 @@
         text-decoration: underline;
         text-decoration-color: chocolate;
       }
+    }
+  }
+  .tombol-offer{
+    background-color: rgb(26, 15, 2);
+    margin-top: 0px !important;
+    color: #ffcc00;
+    font-weight: 500;
+    border-radius: 12px;
+    min-height:35px;
+    min-width: 80px;
+  }
+  .content{
+    margin: 0px 120px 0px 120px;
+    //background-color: #ffcc00;
+    min-height: 760px;
+    .product-lists{
+      margin: 0px 40px 0px 40px !important;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .product{
+        background-color: aliceblue;
+        flex: 0 1 calc(25% - 1em);
+        padding: 10px;
+        margin: 10px;
+        min-height: 240px;
+        min-width: 350px;
+        .text-product{
+          display: flex;
+          justify-content: space-between;
+          flex-wrap: wrap;
+          h5{
+            line-height: 0.1;
+            margin-top: 20px;
+            font-size: 28px;
+            padding-right: 20px;
+          }
+          .product-left{
+            width: 70%;
+          }
+          .product-right{
+            width: 30%;
+          }
+          .product-info{
+            line-height: 0.1;
+            margin-top: 10px;
+            font-size: 16px;
+            color: #4e3308;
+            font-weight: 100;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+          }
+          .cart{
+            background-color: #f6753e;
+            padding: 10px;
+            width: 40px;
+            border-radius: 120px;
+            img{
+              width: 28px;
+              justify-content: center;
+            }
+          }
+        }
+        .rating{
+          position: absolute;
+          margin-left: 20px;
+          background-color: aliceblue;
+          border-radius: 12px;
+          padding: 5px;
+          img{
+           width: 12px;
+          }
+        }
+
+        img{
+          width: 100%;
+        }
+      }
+    }
+    h4{
+      margin-left: 50px;
+      font-size: 32px;
+    }
+   
+    
+    u{
+      text-decoration: underline;
+      text-decoration-color: chocolate;
     }
   }
 }
