--- a/tugas 3/src/output.css
+++ b/tugas 3/src/output.css
@@ -2355,6 +2355,27 @@ video {
   forced-color-adjust: none;
 }
 
+.header {
+  margin-top: 100px;
+  position: relative;
+  height: 40vh;
+  width: 70%;
+  display: flex;
+  background-image: url("assets/Images/bg-testimonial.png");
+  background-size: 120%;
+}
+
+.header::before {
+  content: "";
+  background-color: bisque;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.65;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
